--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
 body {
-    background-color: red; 
+    background-color: none;
+}
+
+#header {
+    width:100%;
+    background-color: beige;
+}
+
+#nav {
+    width:100%;
+    background-color: aqua;
+}
+
+.menu {
+    display:flex;
+    background-color:#d7e5f1;
+    justify-content: space-around;
+    list-style-type: none;
 }
