--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     background-color: beige;
 }
 
+#header > h1 {
+    margin:0;
+}
+
 #nav {
     width:100%;
     background-color: aqua;
@@ -17,4 +21,28 @@ body {
     background-color:#d7e5f1;
     justify-content: space-around;
     list-style-type: none;
+    margin:0;
+}
+
+#middle-wrapper{
+        display: flex;
+}
+
+#main-content-wrapper {
+    background-color:greenyellow;
+    width: 80%; 
+}
+
+#aisde-content-wrapper {
+    background-color:plum;
+    width:20%;
+}
+
+footer {
+    background-color:coral;
+    margin:0;
+}
+
+footer > h1 {
+    margin:0;
 }
